<resources>
    <string name="app_name">MusicApp</string>
    <string name="home_string">Search for Music</string>
    <string name="home_tracks">Tracks</string>

    <!--    activity_main-->
    <string name="genre_pop">Pop</string>
    <string name="genre_rock">Rock</string>
    <string name="genre_rap">Rap</string>
    <string name="genre_latino">Latin</string>
    <string name="genre_movies">Movies</string>
    <string name="genre_electro">Electro</string>
    <string name="genre_country">Country</string>
    <string name="favs">Fav</string>

    <!--    activity_item-->
    <string name="item_artist_name">Artist Name</string>
    <string name="item_track_name">Track Name</string>
    <string name="item_track_duration">Duration</string>
    <string name="item_track_ranking">Ranking</string>
    <string name="play">PLAY</string>

</resources>