<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="@color/musicapp_background_item"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageCoverAlbum"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                tool:src="@drawable/ic_rock" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSongName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tool:text="@string/item_track_name" />

                <TextView
                    android:id="@+id/tvArtistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tool:text="@string/item_artist_name" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageFavSong"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="25dp"
                app:tint="@color/red"
                tool:src="@drawable/ic_fav_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="15sp"
                android:textStyle="bold"
                tool:text="@string/item_track_ranking" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_ranking" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_duration"
                app:tint="#979595" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textStyle="bold"
                tool:text="@string/item_track_duration" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPlayButtom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/play"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>